--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
 
   postgres:
-    image: postgres
+    image: postgres:13.11
     restart: always
     environment:
       POSTGRES_USER: postgres
